bpo-19418: audioop.c: Fix warnings on -0x80000000

bpo-19418, bpo-33781: Fix the following warnings on Windows:

Modules\audioop.c(28): warning C4146: unary minus operator applied
    to unsigned type, result still unsigned
Modules\audioop.c(396): warning C4146: unary minus operator applied
    to unsigned type, result still unsigned